--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,9 @@
     "start": "nest start",
     "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:debug": "nest start --debug --watch",
-    "start:migrate:prod": "prisma migrate deploy && npm run start:prod",
-    "start:prod": "node dist/main",
+    "start:migrate:prod": "prisma migrate deploy",
+    "prisma:seed": "prisma db seed",
+    "start:prod": "node dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
